--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    
+
 </head>
 <body>
-    
+    <div id="container">
+		<section>Section 1</section>
+		<section>Section 2</section>
+		<section>Section 3</section>
+		<section>Section 4</section>
+	</div>
 </body>
 </html>
