--- a/index.html
+++ b/index.html
@@ -4,16 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS Grids</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 <body>
-    <div id="container">
-		<section>Section 1</section>
-		<section>Section 2</section>
-		<section>Section 3</section>
-		<section>Section 4</section>
-	</div>
-</body>
-</html>
+    <!-- ------------------- GRID AREA ------------------------------------------------ -->
+	<h2>Grid Area</h2>
+
+    <div class="container">
+
+        <header>Header</header>
+        <!--<section>
+            <section class="box1">box1</section>
+            <section class="box2">box2</section>
+            <section class="box3">box3</section>
+        </section>-->
+       <main>content</main>
+	    <aside>Sidebar</aside>
+		<footer>
+            <section class="box4">footer section 1</section>
+            <section class="box5">footer section 2</section>
+            <section class="box6">footer section 3</section>
+            <section class="box7">footer section 4</section>
+        </footer> 
+        
+
+    </div> 
+
+
+</body> 
+</html> 
