--- a/index.html
+++ b/index.html
@@ -20,9 +20,21 @@
         <section class="box2">box2</section>
         <section class="box3">box3</section>
         
-       <main>content</main>
+       <main class="flex-items" dir="ltr">
+        <section class="content1">Content Section 1</section>
+        <section class="content2">Content Section 2</section>
+        <section class="content3">Content Section 3</section>
+        <section class="content4">Content Section 4</section>
+        <section class="content5">Content Section 5</section>
+        <section class="content6">Content Section 6</section>
+       </main>
 
-	    <aside>Sidebar</aside>
+	    <aside class="flex-items" dir="ltr">
+            <button class="button1">Button 1</button>
+            <button class="button2">Button 2</button>
+            <button class="button3">Button 3</button>
+            <button class="button4">Button 4</button>
+        </aside>
         
 		<footer>
             <section class="box4">footer section 1</section>
