aside-flexbox done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 
     <div class="container">
 
-        <header>Header</header>
+        <!-- <header class="flex-items" dir="ltr">
+            <button class="button1">Button 1</button>
+            <button class="button2">Button 2</button>
+            <button class="button3">Button 3</button>
+            <button class="button4">Button 4</button>
+        </header> -->
 
         <section class="box1">box1</section> 
         <section class="box2">box2</section>
@@ -29,11 +34,11 @@
         <section class="content6">Content Section 6</section>
        </main>
 
-	    <aside class="flex-items" dir="ltr">
-            <button class="button1">Button 1</button>
-            <button class="button2">Button 2</button>
-            <button class="button3">Button 3</button>
-            <button class="button4">Button 4</button>
+	    <aside class="flex-items-aside">
+            <button class="button5">Button 1</button>
+            <button class="button6">Button 2</button>
+            <button class="button7">Button 3</button>
+            <button class="button8">Button 4</button>
         </aside>
         
 		<footer>
