header-flexbox done

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <div class="container">
 
-        <!-- <header class="flex-items" dir="ltr">
+        <header class="flex-items-header" dir="ltr">
             <button class="button1">Button 1</button>
             <button class="button2">Button 2</button>
             <button class="button3">Button 3</button>
             <button class="button4">Button 4</button>
-        </header> -->
+        </header>
 
         <section class="box1">box1</section> 
         <section class="box2">box2</section>
